database change from sql to nosql for order service