@@ -3,33 +3,59 @@ package com.hfenelsoftllc.order.service;
 import com.hfenelsoftllc.order.dto.OrderEvent;
 import com.hfenelsoftllc.order.dto.OrderRequest;
 import com.hfenelsoftllc.order.dto.OrderResponse;
-import com.hfenelsoftllc.order.entity.Order;
-import com.hfenelsoftllc.order.entity.OrderItem;
+import com.hfenelsoftllc.order.entity.*;
 import com.hfenelsoftllc.order.exception.InvalidOrderOperationException;
 import com.hfenelsoftllc.order.exception.OrderNotFoundException;
-import com.hfenelsoftllc.order.repository.OrderRepository;
+import com.hfenelsoftllc.order.repository.*;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.data.domain.Pageable;
+import org.springframework.data.cassandra.core.CassandraTemplate;
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
 
 import java.math.BigDecimal;
+import java.time.Instant;
 import java.time.LocalDateTime;
+import java.time.ZoneOffset;
 import java.util.List;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
+/**
+ * Core order business logic.
+ *
+ * <p><b>Cassandra design highlights:</b></p>
+ * <ul>
+ *   <li>No {@code @Transactional} — Cassandra is not a relational database; consistency
+ *       is achieved via logged-batch writes to multiple tables and Lightweight Transactions
+ *       (LWT) for optimistic locking.</li>
+ *   <li>Order items are embedded as a Cassandra UDT list — no join, no relationship.</li>
+ *   <li>Writes to {@code orders}, {@code orders_by_user}, and {@code orders_by_correlation}
+ *       are batched for atomicity across denormalised tables.</li>
+ *   <li>Every Kafka event state transition is appended to {@code order_event_log}.</li>
+ * </ul>
+ */
 @Slf4j
 @Service
-@Transactional
 public class OrderService {
 
     private final OrderRepository orderRepository;
+    private final OrdersByUserRepository ordersByUserRepository;
+    private final OrderByCorrelationRepository orderByCorrelationRepository;
+    private final OrderEventLogRepository orderEventLogRepository;
     private final OrderEventProducer eventProducer;
+    private final CassandraTemplate cassandraOperations;
 
-    public OrderService(OrderRepository orderRepository, OrderEventProducer eventProducer) {
+    public OrderService(OrderRepository orderRepository,
+                        OrdersByUserRepository ordersByUserRepository,
+                        OrderByCorrelationRepository orderByCorrelationRepository,
+                        OrderEventLogRepository orderEventLogRepository,
+                        OrderEventProducer eventProducer,
+                        CassandraTemplate cassandraOperations) {
         this.orderRepository = orderRepository;
+        this.ordersByUserRepository = ordersByUserRepository;
+        this.orderByCorrelationRepository = orderByCorrelationRepository;
+        this.orderEventLogRepository = orderEventLogRepository;
         this.eventProducer = eventProducer;
+        this.cassandraOperations = cassandraOperations;
     }
 
     // -------------------------------------------------------------------------
@@ -37,74 +63,117 @@ public class OrderService {
     // -------------------------------------------------------------------------
 
     public OrderResponse createOrder(OrderRequest request, Long userId) {
-        // Calculate total
         BigDecimal total = request.getItems().stream()
                 .map(i -> i.getPrice().multiply(BigDecimal.valueOf(i.getQuantity())))
                 .reduce(BigDecimal.ZERO, BigDecimal::add);
 
+        UUID orderId        = UUID.randomUUID();
         String correlationId = UUID.randomUUID().toString();
+        Instant now          = Instant.now();
 
+        List<OrderItem> items = request.getItems().stream()
+                .map(req -> OrderItem.builder()
+                        .foodItemId(req.getFoodItemId())
+                        .quantity(req.getQuantity())
+                        .price(req.getPrice())
+                        .build())
+                .collect(Collectors.toList());
+
+        // ---- Primary orders table ----
         Order order = Order.builder()
+                .orderId(orderId)
                 .userId(userId)
                 .restaurantId(request.getRestaurantId())
                 .totalAmount(total)
                 .orderStatus("PENDING")
                 .paymentStatus("UNPAID")
                 .correlationId(correlationId)
+                .version(0L)
+                .createdAt(now)
+                .updatedAt(now)
+                .items(items)
                 .build();
 
-        // Build order items
-        List<OrderItem> items = request.getItems().stream()
-                .map(req -> OrderItem.builder()
-                        .order(order)
-                        .foodItemId(req.getFoodItemId())
-                        .quantity(req.getQuantity())
-                        .price(req.getPrice())
-                        .build())
-                .collect(Collectors.toList());
-        order.setItems(items);
+        // ---- Materialized view: orders_by_user ----
+        OrdersByUser ordersByUser = OrdersByUser.builder()
+                .key(new OrdersByUserKey(userId, now, orderId))
+                .restaurantId(request.getRestaurantId())
+                .orderStatus("PENDING")
+                .paymentStatus("UNPAID")
+                .totalAmount(total)
+                .correlationId(correlationId)
+                .items(items)
+                .updatedAt(now)
+                .build();
 
-        Order saved = orderRepository.save(order);
-        log.info("Order persisted. orderId={}, correlationId={}, userId={}, total={}",
-                saved.getOrderId(), correlationId, userId, total);
+        // ---- Deduplication lookup: orders_by_correlation ----
+        OrderByCorrelation byCorrelation = OrderByCorrelation.builder()
+                .correlationId(correlationId)
+                .orderId(orderId)
+                .build();
 
-        // Publish to Kafka — fire-and-forget with async callback
-        OrderEvent event = toOrderEvent(saved, request);
+        // Write all three rows in a single logged batch for consistency
+        cassandraOperations.batchOps()
+                .insert(order)
+                .insert(ordersByUser)
+                .insert(byCorrelation)
+                .execute();
+
+        log.info("Order persisted to Cassandra. orderId={}, correlationId={}, userId={}, total={}",
+                orderId, correlationId, userId, total);
+
+        // Log PRODUCING state before Kafka publish
+        appendEventLog(orderId, UUID.randomUUID().toString(), "ORDER_CREATED", "PRODUCING",
+                correlationId, null, null);
+
+        // Publish signed Kafka event; the producer updates the log to PRODUCED or FAILED
+        OrderEvent event = toOrderEvent(order, request);
         eventProducer.publishOrderEvent(event);
 
-        return toResponse(saved);
+        return toResponse(order);
     }
 
     // -------------------------------------------------------------------------
     // Read
     // -------------------------------------------------------------------------
 
-    @Transactional(readOnly = true)
-    public OrderResponse getOrder(Long orderId, Long userId) {
-        return toResponse(findOrder(orderId, userId));
+    public OrderResponse getOrder(UUID orderId, Long userId) {
+        Order order = findAndVerifyOwner(orderId, userId);
+        return toResponse(order);
     }
 
-    @Transactional(readOnly = true)
-    public List<OrderResponse> getUserOrders(Long userId, Pageable pageable) {
-        return orderRepository.findByUserId(userId, pageable)
-                .map(this::toResponse)
-                .toList();
+    public List<OrderResponse> getUserOrders(Long userId, int limit) {
+        return ordersByUserRepository.findByUserId(userId, limit).stream()
+                .map(this::toResponseFromView)
+                .collect(Collectors.toList());
+    }
+
+    public List<OrderEventLog> getOrderEventLog(UUID orderId) {
+        return orderEventLogRepository.findByOrderId(orderId);
     }
 
     // -------------------------------------------------------------------------
-    // Update
+    // Update status
     // -------------------------------------------------------------------------
 
-    public OrderResponse updateOrderStatus(Long orderId, String newStatus, Long userId) {
-        Order order = findOrder(orderId, userId);
+    public OrderResponse updateOrderStatus(UUID orderId, String newStatus, Long userId) {
+        Order order = findAndVerifyOwner(orderId, userId);
 
         if (!isValidTransition(order.getOrderStatus(), newStatus)) {
             throw new InvalidOrderOperationException(
                     "Cannot transition order from " + order.getOrderStatus() + " to " + newStatus);
         }
 
+        Instant now = Instant.now();
         order.setOrderStatus(newStatus);
-        Order updated = orderRepository.save(order);
+        order.setUpdatedAt(now);
+        Order updated = orderRepository.save(order);          // LWT: IF version = :prev
+
+        // Sync materialized view
+        updateOrdersByUserStatus(userId, order.getCreatedAt(), orderId, newStatus, order.getPaymentStatus(), now);
+
+        appendEventLog(orderId, UUID.randomUUID().toString(), "ORDER_STATUS_UPDATED", "PRODUCED",
+                order.getCorrelationId(), null, null);
 
         log.info("Order status updated. orderId={}, correlationId={}, status={}",
                 orderId, order.getCorrelationId(), newStatus);
@@ -115,8 +184,8 @@ public class OrderService {
     // Cancel
     // -------------------------------------------------------------------------
 
-    public void cancelOrder(Long orderId, Long userId) {
-        Order order = findOrder(orderId, userId);
+    public void cancelOrder(UUID orderId, Long userId) {
+        Order order = findAndVerifyOwner(orderId, userId);
 
         if ("PAID".equals(order.getPaymentStatus())) {
             throw new InvalidOrderOperationException("Cannot cancel a paid order");
@@ -125,36 +194,57 @@ public class OrderService {
             throw new InvalidOrderOperationException("Order is already cancelled");
         }
 
+        Instant now = Instant.now();
         order.setOrderStatus("CANCELLED");
+        order.setUpdatedAt(now);
         orderRepository.save(order);
+
+        updateOrdersByUserStatus(userId, order.getCreatedAt(), orderId, "CANCELLED", order.getPaymentStatus(), now);
+
+        appendEventLog(orderId, UUID.randomUUID().toString(), "ORDER_CANCELLED", "PRODUCED",
+                order.getCorrelationId(), null, null);
 
         log.info("Order cancelled. orderId={}, correlationId={}", orderId, order.getCorrelationId());
     }
 
     // -------------------------------------------------------------------------
-    // Payment status update (called by internal consumer via REST callback)
+    // Payment status update (called by payment consumers via REST callback)
     // -------------------------------------------------------------------------
 
-    public void updatePaymentStatus(Long orderId, String paymentStatus) {
+    public void updatePaymentStatus(UUID orderId, String paymentStatus) {
         Order order = orderRepository.findById(orderId)
-                .orElseThrow(() -> new OrderNotFoundException(orderId));
+                .orElseThrow(() -> new OrderNotFoundException(orderId.toString()));
+
+        Instant now = Instant.now();
         order.setPaymentStatus(paymentStatus);
         if ("PAID".equals(paymentStatus)) {
             order.setOrderStatus("PAID");
         } else if ("FAILED".equals(paymentStatus)) {
             order.setOrderStatus("PENDING"); // allow retry
         }
+        order.setUpdatedAt(now);
         orderRepository.save(order);
+
+        updateOrdersByUserStatus(order.getUserId(), order.getCreatedAt(), orderId,
+                order.getOrderStatus(), paymentStatus, now);
+
+        appendEventLog(orderId, UUID.randomUUID().toString(), "PAYMENT_STATUS_UPDATED", "CONSUMED",
+                order.getCorrelationId(), null, null);
+
         log.info("Payment status updated. orderId={}, paymentStatus={}", orderId, paymentStatus);
     }
 
     // -------------------------------------------------------------------------
-    // Helpers
+    // Private helpers
     // -------------------------------------------------------------------------
 
-    private Order findOrder(Long orderId, Long userId) {
-        return orderRepository.findByOrderIdAndUserId(orderId, userId)
-                .orElseThrow(() -> new OrderNotFoundException(orderId));
+    private Order findAndVerifyOwner(UUID orderId, Long userId) {
+        Order order = orderRepository.findById(orderId)
+                .orElseThrow(() -> new OrderNotFoundException(orderId.toString()));
+        if (!userId.equals(order.getUserId())) {
+            throw new OrderNotFoundException(orderId.toString()); // hide existence from other users
+        }
+        return order;
     }
 
     private boolean isValidTransition(String current, String next) {
@@ -163,6 +253,40 @@ public class OrderService {
             case "PAID"    -> "CANCELLED".equals(next);
             default        -> false;
         };
+    }
+
+    /**
+     * Keep the {@code orders_by_user} view in sync after a status change.
+     * Cassandra does not have UPDATE with a WHERE on non-primary columns, so we
+     * delete the old row and re-insert.  The {@code created_at} clustering key
+     * is immutable on an order, so we pass it from the primary row.
+     */
+    private void updateOrdersByUserStatus(Long userId, Instant createdAt, UUID orderId,
+                                          String orderStatus, String paymentStatus, Instant updatedAt) {
+        OrdersByUserKey key = new OrdersByUserKey(userId, createdAt, orderId);
+        ordersByUserRepository.findById(key).ifPresent(view -> {
+            view.setOrderStatus(orderStatus);
+            view.setPaymentStatus(paymentStatus);
+            view.setUpdatedAt(updatedAt);
+            ordersByUserRepository.save(view);
+        });
+    }
+
+    /** Append an immutable row to the event log. */
+    private void appendEventLog(UUID orderId, String eventId, String eventType,
+                                 String eventStatus, String correlationId,
+                                 String payload, String errorMessage) {
+        OrderEventLog log = OrderEventLog.builder()
+                .key(new OrderEventLogKey(orderId, eventId))
+                .eventType(eventType)
+                .eventStatus(eventStatus)
+                .correlationId(correlationId)
+                .payload(payload)
+                .errorMessage(errorMessage)
+                .createdAt(Instant.now())
+                .updatedAt(Instant.now())
+                .build();
+        orderEventLogRepository.save(log);
     }
 
     private OrderEvent toOrderEvent(Order order, OrderRequest request) {
@@ -177,27 +301,28 @@ public class OrderService {
         return OrderEvent.builder()
                 .eventId(UUID.randomUUID().toString())
                 .correlationId(order.getCorrelationId())
-                .orderId(order.getOrderId())
+                .orderId(order.getOrderId().toString())
                 .userId(order.getUserId())
                 .restaurantId(order.getRestaurantId())
                 .items(eventItems)
                 .totalAmount(order.getTotalAmount())
-                .orderTimestamp(LocalDateTime.now())
+                .orderTimestamp(LocalDateTime.ofInstant(order.getCreatedAt(), ZoneOffset.UTC))
                 .build();
     }
 
     private OrderResponse toResponse(Order order) {
-        List<OrderResponse.OrderItemResponse> itemResponses = order.getItems().stream()
-                .map(i -> OrderResponse.OrderItemResponse.builder()
-                        .itemId(i.getItemId())
-                        .foodItemId(i.getFoodItemId())
-                        .quantity(i.getQuantity())
-                        .price(i.getPrice())
-                        .build())
-                .collect(Collectors.toList());
+        List<OrderResponse.OrderItemResponse> itemResponses = order.getItems() == null
+                ? List.of()
+                : order.getItems().stream()
+                        .map(i -> OrderResponse.OrderItemResponse.builder()
+                                .foodItemId(i.getFoodItemId())
+                                .quantity(i.getQuantity())
+                                .price(i.getPrice())
+                                .build())
+                        .collect(Collectors.toList());
 
         return OrderResponse.builder()
-                .orderId(order.getOrderId())
+                .orderId(order.getOrderId().toString())
                 .userId(order.getUserId())
                 .restaurantId(order.getRestaurantId())
                 .totalAmount(order.getTotalAmount())
@@ -209,5 +334,29 @@ public class OrderService {
                 .items(itemResponses)
                 .build();
     }
-}
 
+    private OrderResponse toResponseFromView(OrdersByUser view) {
+        List<OrderResponse.OrderItemResponse> itemResponses = view.getItems() == null
+                ? List.of()
+                : view.getItems().stream()
+                        .map(i -> OrderResponse.OrderItemResponse.builder()
+                                .foodItemId(i.getFoodItemId())
+                                .quantity(i.getQuantity())
+                                .price(i.getPrice())
+                                .build())
+                        .collect(Collectors.toList());
+
+        return OrderResponse.builder()
+                .orderId(view.getKey().getOrderId().toString())
+                .userId(view.getKey().getUserId())
+                .restaurantId(view.getRestaurantId())
+                .totalAmount(view.getTotalAmount())
+                .orderStatus(view.getOrderStatus())
+                .paymentStatus(view.getPaymentStatus())
+                .correlationId(view.getCorrelationId())
+                .createdAt(view.getKey().getCreatedAt())
+                .updatedAt(view.getUpdatedAt())
+                .items(itemResponses)
+                .build();
+    }
+}
